--- a/app/css/style.css
+++ b/app/css/style.css
@@ -79,6 +79,34 @@ ul.navbar-nav {
 
 
 
+/*sort by*/
+
+.sort-by-container {
+  padding-right: 20px;
+  min-width: 485px;
+}
+
+.sort-by {
+  float: right;
+}
+
+.sort-by button {
+  background-color: #C15030;
+  color: #fff;
+  border-bottom: 2px solid #8C2C11;
+}
+
+.sort-by button:hover {
+  color: #fff;
+}
+
+.sort-by ul {
+  cursor: pointer;
+}
+
+.sort-by li:hover {
+  background-color: #FABAA7;
+}
 
 
 
