--- a/public/css/style.css
+++ b/public/css/style.css
@@ -245,7 +245,8 @@ ul.navbar-nav {
 }
 
 #addBook button {
-  display: block; margin: 5px 20px 10px 10px;
+  display: block; 
+  margin-right: 10px;
   float: right;
   clear: both;
 }
