--- a/app/views/register.ejs
+++ b/app/views/register.ejs
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>
-    <%=title %>
+    <$=title $>
   </title>
 
   <link href="http://getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
