--- a/public/css/style.css
+++ b/public/css/style.css
@@ -67,6 +67,12 @@ ul.navbar-nav {
   color: #fff
 }
 
+.navbar-nav li h2 {
+  font-family: 'Quando';
+  padding: 0 36px 0 0;
+  font-size: 20px;
+}
+
 
 
 
