--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -131,7 +131,7 @@
               </div>
               <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                <label for="add" class="btn btn-primary">Save & Close</label>
+                <label for="add" id="addbook-btn" class="btn btn-primary">Save & Close</label>
               </div>
             </div>
           </div>
