--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -3,6 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <title>Books!</title>
+
+    <link href="http://getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
+
+
   <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.7.0/themes/base/jquery-ui.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
@@ -39,10 +43,10 @@
             </li>
           <$ } else { $>
             <li>
-              <a href="/register" class="add-book-btn">Register</a>
+              <a href="#reg" class="add-book-btn">Register</a>
             </li>
             <li>
-              <a href="/login" class="add-book-btn">Login</a>
+              <a href="#log" class="add-book-btn">Login</a>
             </li>
           <$ } $>
 <!--             <li>
@@ -58,13 +62,14 @@
 
 
 
-
   <$ if ( user ) { $>
-    <div id="page-content">sdfgsdfg</div>
+    <div id="page-content"></div>
   <$ } else { $>
-    <div id="please-login"></div>
+    <div id="please-login">
+      <div class="login-cover"></div>
+    </div>
   <$ } $>
-
+ 
 
 
 
@@ -286,6 +291,57 @@
     </div>
   </script>
 
+  <script type="text/template" id="login">
+    <div class="container">
+    <form class="form-signin" action="/login" method="post">
+          <h2 class="form-signin-heading text-center">Open, says me</h2>
+        
+          <label for="username" class="sr-only">Username</label>
+          <input type="text" name="username" id="username" class="form-control" placeholder="Username" required autofocus>
+          
+          <label for="password" class="sr-only">Password</label>
+          <input type="password" name="password" id="password" class="form-control" placeholder="Password">
+          
+          <button class="btn btn-lg btn-primary btn-block" type="submit">Login</button>
+        </form>
+
+        <div class="row">
+        <div class="center-block text-center">
+        <a href="/oauth/facebook">Login with Facebook</a> |
+        <a href="/oauth/twitter">Login with Twitter</a>
+      </div>
+    </div>
+    </div>
+  </script>
+
+  <script type="text/template" id="register">
+    <div class="container">
+    <form class="form-signin" action="/register" method="post">
+          <h2 class="form-signin-heading text-center">Register</h2>
+        
+          <label for="username" class="sr-only">Username</label>
+          <input type="text" id="username" name="username" class="form-control" placeholder="Username" required autofocus>
+
+          <label for="name" class="sr-only">Name</label>
+          <input type="text" id="name" name="name" class="form-control" placeholder="Name" required autofocus>
+
+          <label for="email" class="sr-only">E-mail</label>
+          <input type="email" id="email" name="email" class="form-control" placeholder="E-mail" required>
+          
+          <label for="password" class="sr-only">Password</label>
+          <input type="password" name="password" id="password" class="form-control" placeholder="Password" required>
+          
+          <button class="btn btn-lg btn-primary btn-block" type="submit">Register</button>
+        </form>
+
+        <div class="row">
+        <div class="center-block text-center">
+        <a href="/oauth/facebook">Login with Facebook</a> |
+        <a href="/oauth/twitter">Login with Twitter</a>
+      </div>
+    </div>
+    </div>
+  </script>
 
 
   <script src="js/lib/jquery.js"></script>
