--- a/app/views/register.ejs
+++ b/app/views/register.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<!-- <html>
 <head>
   <title>
     <$=title $>
@@ -38,4 +38,4 @@
     </div>
     </div>
 </body>
-</html>
+</html> -->
