--- a/public/css/style.css
+++ b/public/css/style.css
@@ -186,7 +186,7 @@ ul.navbar-nav {
 }
 
 .bookContainer:hover {
-  border: 1.5px solid #50C8EB;
+  border: 1.5px solid #FFB9A6;
 }
 
 .bookItemListContainer {
