adds add-book message

--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -217,7 +217,11 @@
 
 <!-- booklist -->
 
-        <div id="bookList" class="col-md-12"></div>
+        <div id="bookList" class="col-md-12">
+          <div class='add-a-book-pig-container'>
+            <img class='add-a-book-pig img-responsive' src="/img/addBook.png" alt='add-a-book-pig'/>
+          </div>
+        </div>
 
 
       </div>
@@ -301,7 +305,7 @@
           <input type="text" name="username" id="username" class="form-control" placeholder="Username" required autofocus>
           
           <label for="password" class="sr-only">Password</label>
-          <input type="password" name="password" id="password" class="form-control" placeholder="Password">
+          <input type="password" name="password" id="password" class="form-control" placeholder="Password" required>
           
           <button class="btn btn-lg btn-primary btn-block" type="submit">Login</button>
         </form>
