--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -114,8 +114,8 @@
               <div class="modal-body">
                 <div id="books">
                   <div id="imageCoverUpload">
-                    <img src="" alt="" id="uploadedImage">
-                    <form id="uploadCoverForm" method="post" action="/api/cover" enctype="multipart/form-data">
+                    <img src="/img/winnebego.jpg" alt="" id="uploadedImage">
+                    <form id="uploadCoverForm" method="post" action="/upload" enctype="multipart/form-data">
                       <input type="file" id="coverImageUpload" name="coverImageUpload">
                     </form>
                     <div id="status"></div>
