transfers routes in express.js to proper route, standby for proper route configuration

--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -115,7 +115,7 @@
                 <div id="books">
                   <div id="imageCoverUpload">
                     <img src="/img/winnebego.jpg" alt="" id="uploadedImage">
-                    <form id="uploadCoverForm" method="post" action="/upload" enctype="multipart/form-data">
+                    <form id="uploadCoverForm" method="post" action="api/coverUpload" enctype="multipart/form-data">
                       <input type="file" id="coverImageUpload" name="coverImageUpload">
                     </form>
                     <div id="status"></div>
