adds proper route config for books

--- a/app/views/partials/_book_template.ejs
+++ b/app/views/partials/_book_template.ejs
@@ -1,4 +1,4 @@
-    <div class="col-md-6 bookWrap">
+<!--     <div class="col-md-6 bookWrap">
       <div class="bookContainer col-xs-12 col-sm-12 col-md-12">
         <div class="bookImageContainer">
           <img src="[%= coverImage %]" alt="coverImage"/>
@@ -23,4 +23,4 @@
                 data-target="#editBookModal">Edit</a></button> 
         </div>
       </div>
-    </div>
+    </div> -->
