--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -358,8 +358,8 @@
   <script src="js/lib/underscore.js"></script>
   <script src="js/lib/backbone.js"></script>
     <script src="js/lib/backbone.paginator.min.js"></script>
-    <script src="js/lib/backgrid.js"></script>
-    <script src="js/lib/backgrid-paginator.js"></script>
+    <script src="js/lib/backgrid.min.js"></script>
+    <script src="js/lib/backgrid-paginator.min.js"></script>
   <script src="js/models/book.js"></script>
   <script src="js/models/login.js"></script>
   <script src="js/collections/booklist.js"></script>
