--- a/public/css/style.css
+++ b/public/css/style.css
@@ -132,7 +132,6 @@ ul.navbar-nav {
 
 
 
-
 /*sort by*/
 
 .sort-by-container {
@@ -169,6 +168,49 @@ ul.navbar-nav {
   float: right;
   padding: 30px 50px 0 0px;
 }
+
+
+
+
+/* paginator */
+
+#paginator a {
+  float: left;
+  background-color: #C15030;
+  text-align: center;
+  color: #fff;
+  outline: none;
+  border-bottom: 2px solid #8C2C11;
+  border-radius: 4px;
+  margin-right: 10px;
+  padding: 1px 9px;
+}
+
+#paginator a:hover, #paginator a:focus {
+  background-color: #C15030;
+  color: #fff;
+  margin-top: 2px;
+  border-bottom: none;
+  text-decoration: none;
+}
+
+#paginator ul {
+  list-style-type: none;
+  width: 124px;
+  margin-left: -40px;
+}
+
+#paginator {
+  margin-top: 30px;
+  height: 100px;
+  width: 100%;
+  text-align: center;
+}
+
+.backgrid-paginator {
+  display: inline-block
+}
+
 
 
 
