--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -86,10 +86,10 @@
                   <span class="caret"></span>
                 </button>
                 <ul class="dropdown-menu">
-                  <li class="book-filter" data-filter="title"><a class="book-filter" href="#/title" data-filter="title">Title</a></li>
-                  <li class="book-filter" data-filter="author"><a class="book-filter" href="#/author" data-filter="author">Author</a></li>
-                  <li class="book-filter" data-filter="dateCompleted"><a class="book-filter" href="#/dateCompleted" data-filter="dateCompleted">Date Completed</a></li>
-                  <li class="book-filter" data-filter="stars"><a class="book-filter" href="#/stars" data-filter="stars">Rating</a></li>
+                  <li class="book-filter" data-filter="title"><a class="book-filter" href="#/title" data-filter="title">Title&nbsp;&nbsp;<i></i></a></li>
+                  <li class="book-filter" data-filter="author"><a class="book-filter" href="#/author" data-filter="author">Author&nbsp;&nbsp;<i></i></a></li>
+                  <li class="book-filter" data-filter="dateCompleted"><a class="book-filter" href="#/dateCompleted" data-filter="dateCompleted">Date Completed&nbsp;&nbsp;<i></i></a></li>
+                  <li class="book-filter" data-filter="stars"><a class="book-filter" href="#/stars" data-filter="stars">Rating&nbsp;&nbsp;<i></i></a></li>
                 </ul>
               </li>
               <li>
