adds error alert for unuploaded image

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10,6 +10,9 @@ body {
 }
 
 
+/* removes blue outline */
+a:focus {outline:0 !important;}
+button:focus {outline:0 !important;}
 
 
 /*bootstrap overwrites*/
