adds search bar to index, animation

--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -92,11 +92,17 @@
                   <li class="book-filter" data-filter="stars"><a class="book-filter" href="#/stars" data-filter="stars">Rating&nbsp;&nbsp;<i></i></a></li>
                 </ul>
               </li>
-              <li>
-                <a href="#" class="sort-by"
+              <li class="sort-by">
+                <a href="#" 
                     id="addBook"
                     data-toggle="modal"
                     data-target="#addBookModal"><button class="btn btn-small">Add Book</button></a>
+              </li>
+              <li class="sort-by">
+                <div class="search-books">
+                  <span class="icon"><i class="fa fa-search"></i></span>
+                  <input type="search" id="search" placeholder="Search..." />
+                </div>
               </li>
             </ul>
         </div>
