--- a/app/views/login.ejs
+++ b/app/views/login.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- <html>
+<html>
 <head>
   <title>
     <$=title $>
@@ -33,4 +33,4 @@
     </div>
 </div>
 </body>
-</html> -->
+</html>
