small touches to edit book modal

--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -157,7 +157,7 @@
             <div class="modal-content">
               <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                <h4 class="modal-title" id="editBookModalLabel">New Book!</h4>
+                <h4 class="modal-title" id="editBookModalLabel">Edit!</h4>
               </div>
               <div class="modal-body">
                 <div id="editBooks">
