--- a/app/views/login.ejs
+++ b/app/views/login.ejs
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
 <head>
   <title>
@@ -33,4 +33,4 @@
     </div>
 </div>
 </body>
-</html>
+</html> -->
