--- a/app/views/register.ejs
+++ b/app/views/register.ejs
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
 <head>
   <title>
@@ -38,4 +38,4 @@
     </div>
     </div>
 </body>
-</html>
+</html> -->
