--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Books!</title>
 
+  <link rel="icon" type="image/png" href="/img/fly-pig-serious-icon.png">
   <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.7.0/themes/base/jquery-ui.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
