change title to Justokayreads

--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Books!</title>
+  <title>Justokayreads</title>
 
   <link rel="icon" type="image/png" href="/img/fly-pig-serious-icon.png">
   <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.7.0/themes/base/jquery-ui.css">
@@ -24,7 +24,7 @@
           <a class="navbar-brand" href="http://www.andersonholderness.com">
             <img class="img-responsive nav-logo" src="/img/fly-pig-serious-icon.png">
           </a>
-          <div class="appTitle navbar-left">BK LST</div>
+          <div class="appTitle navbar-left">Justokayreads</div>
           <button type="button" class="navbar-right navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
             <span class="sr-only">Toggle navigation</span>
             <span class="fa fa-bars"></span>
