--- a/public/css/style.css
+++ b/public/css/style.css
@@ -81,6 +81,10 @@ ul.navbar-nav {
   padding-top: 15px;
 }
 
+.navbar-nav li {
+  display: inline-block;
+}
+
 .navbar-nav li a.add-book-btn {
   background-color: #C15030;
   text-align: center;
@@ -117,13 +121,12 @@ ul.navbar-nav {
 }
 
 #please-login .login-cover {
-  background: url("../img/pleaseLogin.png") no-repeat;
-  background-size: cover;
+  background: url("../img/pleaseLogin2.png") no-repeat;
+  background-size: 80%;
   background-position: center;
-  max-width: 1300px;
-  height: 1000px;
-  border-radius: 12px;
-  box-shadow: 0px 0px 70px #999999;
+  max-width: 814px;
+  min-width: 480px;
+  height: 550px;
   margin-bottom: 20px
 }
 
